<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookingInfoActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

<androidx.cardview.widget.CardView
 android:layout_width="match_parent"
  android:layout_height="wrap_content"
   android:layout_margin="8dp">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical">
           <TextView
              android:layout_width="match_parent"
               android:layout_height="wrap_content"
                android:text="Rental Information"
                android:layout_gravity="center"
                  android:textAlignment="center"
                android:textSize="22sp"
                android:textColor="@color/DarkBlue"
                 android:textStyle="bold"
                  android:layout_marginBottom="5dp"/>
             <TextView
                 android:id="@+id/eve_cost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Hall booking cost (Evening Shift): "
                    android:textColor="@color/Black"
                    android:textSize="15sp"/>
          <TextView
              android:id="@+id/day_cost"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="Hall booking cost (Day Shift): "
              android:textColor="@color/Black"
              android:textSize="15sp"/>
    </LinearLayout>
 </androidx.cardview.widget.CardView>

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Booking Process"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textColor="@color/DarkBlue"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/booking_process"
        android:textColor="@color/Black"
        android:textSize="15sp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Online Booking Process"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textSize="22sp"
                    android:textColor="@color/DarkBlue"
                    android:textStyle="bold"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/online_booking"
                    android:textColor="@color/Black"
                    android:textSize="15sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" After Online Booking Process"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textColor="@color/DarkBlue"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/after_online_booking"
                android:textColor="@color/Black"
                android:textSize="15sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    </LinearLayout>

</ScrollView>