<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FoodPackagesActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Blue">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Our offered food packages"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/White"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/package_card1"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_margin="15dp"
                app:cardCornerRadius="20dp"
                android:foreground="?android:attr/selectableItemBackground">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Package 1"
                    android:textColor="@color/Blue"
                    android:textSize="20sp"
                    android:layout_marginBottom="10dp"/>
                <ImageView
                    android:id="@+id/package1_photo"
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:padding="5dp"
                    android:src="@drawable/package1_photo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/package1"
                    android:textColor="@color/Black"
                    android:textSize="12sp" />
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="10dp"
                   android:gravity="center"
                   android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Price (per person): "
                    android:textColor="@color/Black"
                    android:textSize="12sp"/>
                   <TextView
                       android:id="@+id/package1_price"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textColor="@color/Black"
                       android:textStyle="bold"
                       android:textSize="12sp" />
               </LinearLayout>

            </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/package_card2"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_margin="15dp"
                app:cardCornerRadius="20dp"
                android:foreground="?android:attr/selectableItemBackground">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Package 2"
                        android:textColor="@color/Blue"
                        android:textSize="20sp"
                        android:layout_marginBottom="10dp"/>
                    <ImageView
                        android:id="@+id/package2_photo"
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:padding="5dp"
                        android:src="@drawable/morog_polao" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:text="@string/package2"
                        android:textColor="@color/Black"
                        android:textSize="12sp" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Price (per person): "
                            android:textColor="@color/Black"
                            android:textSize="12sp"/>
                        <TextView
                            android:id="@+id/package2_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/Black"
                            android:textStyle="bold"
                            android:textSize="12sp"
                            />
                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/package_card3"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_margin="15dp"
                    app:cardCornerRadius="20dp"
                    android:foreground="?android:attr/selectableItemBackground">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Package 3"
                            android:textColor="@color/Blue"
                            android:textSize="20sp"
                            android:layout_marginBottom="10dp"/>
                        <ImageView
                            android:id="@+id/package3_photo"
                            android:layout_width="150dp"
                            android:layout_height="120dp"
                            android:padding="10dp"
                            android:src="@drawable/kacchi" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_gravity="center_horizontal"
                            android:textAlignment="center"
                            android:text="@string/package3"
                            android:textColor="@color/Black"
                            android:textSize="12sp" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Price (per person): "
                                android:textColor="@color/Black"
                                android:textSize="12sp"/>
                            <TextView
                                android:id="@+id/package3_price"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/Black"
                                android:textStyle="bold"
                                android:textSize="12sp"
                                />
                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/package_card4"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_margin="15dp"
                    app:cardCornerRadius="20dp"
                    android:foreground="?android:attr/selectableItemBackground">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Package 4"
                            android:textColor="@color/Blue"
                            android:textSize="20sp"
                            android:layout_marginBottom="10dp"/>
                        <ImageView
                            android:id="@+id/package4_photo"
                            android:layout_width="150dp"
                            android:layout_height="120dp"
                            android:padding="10dp"
                            android:src="@drawable/plain_polao" />

                        <TextView
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                           android:textAlignment="center"
                            android:layout_marginTop="10dp"
                            android:text="@string/package4"
                            android:textColor="@color/Black"
                            android:textSize="12sp" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Price (per person): "
                                android:textColor="@color/Black"
                                android:textSize="12sp"/>
                            <TextView
                                android:id="@+id/package4_price"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/Black"
                                android:textStyle="bold"
                                android:textSize="12sp"
                                />
                        </LinearLayout>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>